# scamper-engine

./: .gitignore  CAMPAIGN_PLAN.md  Cargo.toml  PROJECT_PLAN.md  README.md  RECORD_REPLAY.md  install.sh  run.sh
docs/: GRAPHICS_UPGRADE_PLAN.md
engine/: Cargo.toml
engine/src/: backend.rs  capture.rs  dbg.rs  effects.rs  framebuffer.rs  input.rs  lib.rs  menu.rs  mob.rs  munchii.rs  player.rs  shake.rs  sprite.rs  sprite_lab.rs  store.rs  strings.rs  terminal.rs  time.rs  ui.rs  world.rs
engine/src/level/: art.rs  import.rs  ir.rs  mod.rs  slice.rs  stitch.rs  world.rs
engine/src/strings/: en.txt
engine/tests/: panic_log.rs
fixtures/captures/: ci-smoke.scap  ci-smoke.snap
games/arcade/: Cargo.toml
games/arcade/src/: main.rs
games/supermunchii/: Cargo.toml  slices.pack
games/supermunchii/fixtures/captures/: ci-smoke.snap
games/supermunchii/levels/: yard-romp-1.lvl  yard-romp-2.lvl  yard-romp-3-boss.lvl
games/supermunchii/src/: lib.rs  main.rs
games/zoomies/: Cargo.toml
games/zoomies/src/: game.rs  gen.rs  lib.rs  main.rs
src/: backend.rs  capture.rs  dbg.rs  effects.rs  framebuffer.rs  input.rs  kitty.rs  lib.rs  main.rs  math.rs  munchii.rs  player.rs  png.rs  sim.rs  sprite_lab.rs  terminal.rs  tile_lab.rs  time.rs  world.rs
src/level/: art.rs  import.rs  ir.rs  mod.rs  world.rs
