[package]
name = "supermunchii"
version = "0.1.0"
edition = "2021"
description = "Super Munchii — the sample side-scrolling platformer that exercises (and tests) the scamper engine."
license = "MIT OR Apache-2.0"

[[bin]]
name = "supermunchii"
path = "src/main.rs"

[dependencies]
scamper = { path = "../../engine" }
